k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbdocs-viewer
  namespace: fpaasrequirementdefinition-2038
  labels:
    app: dbdocs-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbdocs-viewer
  template:
    metadata:
      labels:
        app: dbdocs-viewer
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: dbdocs-viewer
          image: sun-k8s-private-registry.sun-asterisk.vn/dbdocs-viewer:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
