k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbdocs-api-service
  namespace: fpaasrequirementdefinition-2038
spec:
  selector:
    app: dbdocs-api
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
